removed RJS responses and cleaned controlers, solved apearing of horizontal scrolling

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -148,3 +148,5 @@ textarea {
     background-color: #F8F8F8;
   }
 }
+//my fix
+#myNavbar {overflow: hidden;}
